style.css
/* ... */
/* Styling for the home icon in the navigation menu */
.home-icon a {
  padding: 20px 10px;
  font-size: 2rem;
}

/* Slide-in animation for each navigation menu item */
.slide-in-1 {
  animation: slide-in 0.4s linear 0.2s both;
}

.slide-in-2 {
  animation: slide-in 0.4s linear 0.4s both;
}

.slide-in-3 {
  animation: slide-in 0.4s linear 0.6s both;
}

.slide-in-4 {
  animation: slide-in 0.4s linear 0.8s both;
}

.slide-in-5 {
  animation: slide-in 0.4s linear 1s both;
}

/* Keyframes for the slide-in animation */
@keyframes slide-in {
  from {
    transform: translateX(-100%);
  }

  to {
    transform: translateX(0);
  }
}

/* screens smaller than 768px */
@media screen and (max-width: 768px) {


  nav ul li {
    height: 10%;
    padding: 0.5rem 0;
  }


  nav li a {
    top: 50%;
    font-size: 1.5rem;
  }


  .menu-bars {
    top: 0.5rem;
    right: 1rem;
  }

  .home-icon {
    right: 1rem;
  }
}

/* screens smaller than 480px */
@media screen and (max-width: 480px) {


  nav ul li {
    height: 8%;
    padding: 0.25rem 0;
  }

  nav li a {
    font-size: 1rem;
  }
}


/* ----------About----------- */
section#about {
  background-color: #DDDDDD;
}

.wrapper {
  display: flex;
  width: 100%;
  height: 100%;
  justify-content: center;
  align-items: center;
  padding: 0 10%;
  overflow: hidden;
  position: relative;
}

.wrapper::before {
  position: absolute;
  content: '';
  height: 20vw;
  width: 20vw;
  border-radius: 50%;
  left: -12%;
  top: 40%;
  background: linear-gradient(45deg, #7f00ff, pink);
  animation: object1 6s linear infinite;
  transform-origin: center;
}

.wrapper::after {
  position: absolute;
  content: '';
  height: 8vw;
  width: 8vw;
  border-radius: 50%;
  left: 35%;
  top: 12%;
  background: linear-gradient(45deg, #7f00ff, pink);
  animation: object2 6s linear infinite;
  transform-origin: center;
}

.cols {
  width: 50%;
}

.cols {
  width: 50%;
}

.topline {
  display: block;
  position: relative;
  font-size: 3.5vw;
  letter-spacing: 0.5vw;
  color: #3d535f;
}

.line {
  display: flex;
  position: relative;
  z-index: 3;
}

.square {
  display: block;
  font-family: Libre Baskerville, sans-serif;
  font-size: 3vw;
  font-weight: 900;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  cursor: default;
  transition: all 0.3s;
  color: #3d535f;
  position: relative;
  z-index: 1;
}

.square span {
  color: #7f00ff;
}

p {
  display: block;
  font-family: Montserrat, sans-serif;
  width: 90%;
  font-size: 1vw;
  color: #3d535f;
}

.btns {
  width: 100%;
  position: relative;
  left: 1vw;
}

.cols0 {
  z-index: 5;
}

button {
  font-family: Montserrat, sans-serif;
  outline: none;
  border-radius: 30px;
  cursor: pointer;
  font-size: 25px;
  font-weight: 400;
  color: #fff;
  background-color: #3d535f;
  background: #3d535f;
  padding: 8px 14px;
  margin: 40px 15px;
  letter-spacing: 2px;
  text-transform: capitalize;
  transition: ease .50s;
  text-decoration: none;
  display: inline-block;
  padding: 9px 30px;
  letter-spacing: 1px;




}

button:hover {
  background: #7f00ff;
  transform: scale(1.1);
  background: #7f00ff;
  border: 2px solid #7f00ff;
  color: #ffffff;
}



.square:hover {
  color: #46C2CB;
}

.square span:hover {
  color: #46C2CB;
}

/* rubberBand Animation */

@-webkit-keyframes rubberBand {
  0% {
    -webkit-transform: scale3d(1, 1, 1);
    transform: scale3d(1, 1, 1)
  }

  30% {
    -webkit-transform: scale3d(1.25, .75, 1);
    transform: scale3d(1.25, .75, 1)
  }

  40% {
    -webkit-transform: scale3d(0.75, 1.25, 1);
    transform: scale3d(0.75, 1.25, 1)
  }

  50% {
    -webkit-transform: scale3d(1.15, .85, 1);
    transform: scale3d(1.15, .85, 1)
  }

  65% {
    -webkit-transform: scale3d(.95, 1.05, 1);
    transform: scale3d(.95, 1.05, 1)
  }

  75% {
    -webkit-transform: scale3d(1.05, .95, 1);
    transform: scale3d(1.05, .95, 1)
  }

  100% {
    -webkit-transform: scale3d(1, 1, 1);
    transform: scale3d(1, 1, 1)
  }
}

/* non-prefixed keyframes  */


@keyframes rubberBand {
  0% {
    -webkit-transform: scale3d(1, 1, 1);
    -ms-transform: scale3d(1, 1, 1);
    transform: scale3d(1, 1, 1)
  }

  30% {
    -webkit-transform: scale3d(1.25, .75, 1);
    -ms-transform: scale3d(1.25, .75, 1);
    transform: scale3d(1.25, .75, 1)
  }

  40% {
    -webkit-transform: scale3d(0.75, 1.25, 1);
    -ms-transform: scale3d(0.75, 1.25, 1);
    transform: scale3d(0.75, 1.25, 1)
  }

  50% {
    -webkit-transform: scale3d(1.15, .85, 1);
    -ms-transform: scale3d(1.15, .85, 1);
    transform: scale3d(1.15, .85, 1)
  }

  65% {
    -webkit-transform: scale3d(.95, 1.05, 1);
    -ms-transform: scale3d(.95, 1.05, 1);
    transform: scale3d(.95, 1.05, 1)
  }

  75% {
    -webkit-transform: scale3d(1.05, .95, 1);
    -ms-transform: scale3d(1.05, .95, 1);
    transform: scale3d(1.05, .95, 1)
  }

  100% {
    -webkit-transform: scale3d(1, 1, 1);
    -ms-transform: scale3d(1, 1, 1);
    transform: scale3d(1, 1, 1)
  }
}

.rubberBand {
  -webkit-animation-name: rubberBand;
  animation-name: rubberBand;
}


.imgbox {
  position: relative;
  width: 100%;
  height: 100%;
}

.imgbox img {
  position: relative;
  height: 100%;
  width: calc(130% - 80px);
  top: -100px;
  right: 50px;
  animation: animateUser 4s linear infinite;
}

/* animation moves the image */

@keyframes animateUser {
  50% {
    right: 30px;
    top: -90px;
  }
}

.imgbox #color {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%) rotate(-35deg);
  width: 500px;

  max-width: 160%;

  filter: saturate(200%);
  animation: animate 4s linear infinite;
  padding-left: 30%;
}

@keyframes animate {
  50% {
    top: 49%;
    left: 51%;
    width: 475px;
  }
}


@keyframes object1 {
  50% {
    left: -13%;
    top: 41%;
  }
}

@keyframes object2 {
  50% {
    left: 35%;
    top: 10%;
  }
}
/* ... */

